# ssb64-port

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build.ps1  build.sh  log.txt
assets/: icon.icns
cmake/: RelocData.cmake
debug_tools/m64p_trace_plugin/: CMakeLists.txt  gfx_trace_plugin.c  m64p_plugin_api.h  rsp_trace_plugin.c
docs/: btt_arrow_palette_investigation_2026-04-29.md  cmake_warning_audit_2026-04-20.md  cmake_warning_audit_handoff_2026-04-20.md  css_selected_anim_vfx_sfx_investigation_2026-04-29.md  fighter_intro_animation_investigation.md  intro_explosion_alpha_cutout_handoff_2026-04-25.md  issue_72_yoshi_camera_block_handoff_2026-05-02.md  plan-token-pointer-system.md  relocdata_p15_followup_2026-05-03.md  sprite_broken_textures_handoff_2026-04-19.md  switch_port.md
include/: ssb_types.h  stdarg.h  stdlib.h  ultra64.h
port/: coroutine.h  coroutine_posix.cpp  coroutine_switch.cpp  coroutine_win32.cpp  first_run.cpp  first_run.h  frame_interpolation.cpp  frame_interpolation.h  frame_interpolation_selftest.cpp  frame_interpolation_test_main.cpp  gameloop.cpp  gameloop.h  native_dialog.cpp  native_dialog.h  port.cpp  port.h  port_aobj_fixup.cpp  port_aobj_fixup.h  port_dl_ranges.cpp  port_log.c  port_log.h  port_watchdog.cpp  port_watchdog.h  renderdoc_app.h  renderdoc_trigger.cpp  renderdoc_trigger.h
scripts/: build-switch.sh  package-macos.sh
tools/: annotate_externs_from_torch.py  blob_layout_analysis.csv  build_reloc_resource.py  examine_blob_layout.py  examine_pointer_targets.py  examine_reloc_files.py  test_vpk0.c  (+16 more)
(+238 files in other folders)
